Add OIDC4VP response validation (#70)
